Darkness Rule Begins

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-TheBigFuckinRocket™_v3.6"
+CONFIG_LOCALVERSION="-DARKNESS"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
